Some changes to lab_04