@@ -1,5 +1,6 @@
 package bg.sofia.uni.fmi.mjt.fittrack;
 
+import bg.sofia.uni.fmi.mjt.fittrack.exception.OptimalPlanImpossibleException;
 import bg.sofia.uni.fmi.mjt.fittrack.workout.WorkoutType;
 import bg.sofia.uni.fmi.mjt.fittrack.workout.filter.WorkoutFilter;
 import bg.sofia.uni.fmi.mjt.fittrack.workout.Workout;
@@ -12,6 +13,11 @@ public class FitPlanner implements FitPlannerAPI {
     private final Collection<Workout> availableWorkouts;
 
     public FitPlanner(Collection<Workout> availableWorkouts) {
+
+        if(availableWorkouts == null) {
+            throw new IllegalArgumentException("Cannot create FitPlanner with null value passed");
+        }
+
         this.availableWorkouts = new ArrayList<>(availableWorkouts);
     }
 
@@ -34,9 +40,18 @@ public class FitPlanner implements FitPlannerAPI {
     @Override
     public List<Workout> findWorkoutsByFilters(List<WorkoutFilter> filters) {
 
+        if(filters == null) {
+            throw new IllegalArgumentException("findWorkoutsByFilters cannot be called with null values");
+        }
+
+        // if we dont have workouts, we return empty list
+        if(this.availableWorkouts.isEmpty()) {
+            return new ArrayList<>();
+        }
+
         List<Workout> passedWorkouts = new ArrayList<>();
 
-        // checks all the workout and add only those who pass all the filters
+        // checks all the workout and add to the list only those who pass all the filters
         for(Workout workout : availableWorkouts) {
 
             boolean hasPassedAllFilters = true;
@@ -57,6 +72,15 @@ public class FitPlanner implements FitPlannerAPI {
 
     @Override
     public List<Workout> generateOptimalWeeklyPlan(int totalMinutes) {
+
+        if(totalMinutes < 0) {
+            throw new IllegalArgumentException("generating optimal weekly plan with totalMinutes being negative is impossible");
+        }
+
+        // impossible to create a generate optimal weekly plan that is why we are sending empty one
+        if(totalMinutes == 0 || this.availableWorkouts.isEmpty()) {
+            return new ArrayList<>();
+        }
 
         List<Workout> sortedByDuration = new ArrayList<>(this.availableWorkouts);
         List<Workout> chosenWorkout = new ArrayList<>();
@@ -93,6 +117,11 @@ public class FitPlanner implements FitPlannerAPI {
             }
         }
 
+        int optimalWeeklyPlan = calculatedWorkouts[sortedByDuration.size()][totalMinutes];
+        if(optimalWeeklyPlan == 0) {
+            throw new OptimalPlanImpossibleException("Plan impossible to create");
+        }
+
         int currentLookedIndex = totalMinutes;
         for(int row = sortedByDuration.size(); row >= 1; row--) {
 
@@ -108,40 +137,48 @@ public class FitPlanner implements FitPlannerAPI {
     @Override
     public Map<WorkoutType, List<Workout>> getWorkoutsGroupedByType() {
 
+        // here we will store all the workout types, and each key will have a list of workouts
         Map<WorkoutType, List<Workout>> workoutsByType = new HashMap<>();
 
         for(Workout workout : availableWorkouts) {
+
+            // if the workout type is present in the map, we add the workout directly to the list
             if(workoutsByType.containsKey(workout.getType())) {
                 workoutsByType.get(workout.getType()).add(workout);
             }
+
+            // if the workout type is not present, we add the workout type as a key and then add the workout to the list
             else {
                 workoutsByType.put(workout.getType(), new ArrayList<>());
                 workoutsByType.get(workout.getType()).add(workout);
             }
         }
 
-        return workoutsByType;
+        // returning a view
+        return Collections.unmodifiableMap(workoutsByType);
     }
 
     @Override
     public List<Workout> getWorkoutsSortedByCalories() {
 
+        // comparing by calories in desc
         Comparator<Workout> comparatorSortedByCalories = new Comparator<Workout>() {
             @Override
             public int compare(Workout o1, Workout o2) {
-                return Integer.compare(o1.getCaloriesBurned(), o2.getCaloriesBurned());
+                return Integer.compare(o2.getCaloriesBurned(), o1.getCaloriesBurned());
             }
         };
 
         List<Workout> sortedByCalories = new ArrayList<>(this.availableWorkouts);
         sortedByCalories.sort(comparatorSortedByCalories);
 
-        return sortedByCalories;
+        return Collections.unmodifiableList(sortedByCalories);
     }
 
     @Override
     public List<Workout> getWorkoutsSortedByDifficulty() {
 
+        // comparing by difficulty in asc
         Comparator<Workout> comparatorSortedByDifficulty = new Comparator<Workout>() {
             @Override
             public int compare(Workout o1, Workout o2) {
@@ -149,14 +186,25 @@ public class FitPlanner implements FitPlannerAPI {
             }
         };
 
+        // moving all the elements to availableWorkout
         List<Workout> sortedByDifficulties = new ArrayList<>(this.availableWorkouts);
+
+        // sorting by the algorithm
         sortedByDifficulties.sort(comparatorSortedByDifficulty);
 
-        return sortedByDifficulties;
+        // using this approach to prevent NullPointerException throw when using List.of()
+        return Collections.unmodifiableList(sortedByDifficulties);
     }
 
     @Override
     public Set<Workout> getUnmodifiableWorkoutSet() {
-        return Set.copyOf(this.availableWorkouts);
+
+        if(this.availableWorkouts.isEmpty()) {
+            return new HashSet<>();
+        }
+
+        // using this approach to prevent NullPointerException throw when using Set.of()
+        Set<Workout> unmodifiableSet = new HashSet<>(this.availableWorkouts);
+        return Collections.unmodifiableSet(unmodifiableSet);
     }
 }
